# oyo

./: .gitignore  Cargo.toml  DIFF_VIEWER_SPEC.md  README.md  THEME.md  flake.nix
.github/workflows/: ci.yml  release.yml
crates/oyo/: Cargo.toml
crates/oyo-core/: Cargo.toml
crates/oyo-core/src/: change.rs  diff.rs  git.rs  lib.rs  multi.rs  step.rs
crates/oyo/src/: app.rs  color.rs  config.rs  dashboard.rs  main.rs  syntax.rs  ui.rs
crates/oyo/src/views/: evolution.rs  mod.rs  side_by_side.rs  single_pane.rs  split.rs  tests.rs
crates/oyo/themes/: aura.json  ayu.json  catppuccin-frappe.json  catppuccin-macchiato.json  catppuccin.json  cobalt2.json  dracula.json  everforest.json  flexoki.json  github.json  gruvbox.json  kanagawa.json  material.json  monokai.json  nightowl.json  nord.json  one-dark.json  palenight.json  rosepine.json  schema.json  solarized.json  synthwave84.json  tokyonight.json  zenburn.json
docs/: THEME.md
